Fixed some layout issues.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,6 +35,10 @@
 
 }
 
+.trigger {
+    margin-left: 100px;
+}
+
 hr {
     margin: 30px;
 }
@@ -61,39 +65,8 @@ hr {
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
         text-align: right;
 
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
 
         .page-link {
             display: block;
